--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
    <title>Contact Us</title>
    <link rel="stylesheet" href="reset.css">
    <link rel="stylesheet" href="main.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&family=Solitreo&display=swap" rel="stylesheet">
 </head>
 <body>
    
@@ -27,7 +30,7 @@
    </nav>
   
 
-      </main>
+      <main>
       <section class="contact-us">
          <h2>Contact Us</h2>
          <p><strong>Phone:</strong> <a href="tel:5138471240">513-847-1240</a></p>
@@ -48,16 +51,7 @@
             Christmas Eve (12/24), Christmas Day (12/25),<br>
             Day After Christmas (12/26), and New Year’s Day (1/1).</p>
             </section>
-
-
-
-
-
-
-
-
-
-
+      </main>
 
 
       <footer>
