--- a/faqs.html
+++ b/faqs.html
@@ -6,6 +6,9 @@
    <title>FAQs</title>
    <link rel="stylesheet" href="reset.css">
    <link rel="stylesheet" href="main.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&family=Solitreo&display=swap" rel="stylesheet">
 </head>
 <body>
    
