added final pictures and styles; responsiveness.

--- a/about.html
+++ b/about.html
@@ -32,12 +32,21 @@
 
       <section class="about-mandys">
          <h2> About Mandy's Dog-o-Mat</h2>
-         <p> Welcome to Mandy's, your favorite DIY pet grooming salon.  </p>
+         <p> Welcome to Mandy's, your favorite DIY pet grooming salon!  </p>
 
-         <p> Whether your furry friend needs a deep clean after a rainy day at the dog park or just a regular bath & blow dry, our self-serve stations provide all you'll need! </p> 
+         <section class="hero">
+            <div class="hero-pic">
+               <img src="images/storeinterior.jpg" alt="Mandy's store interior">
+               <h2 class="hero-tagline"> Bring your pet and come on in!  </h2>
+            </div>
+
+         </section>
+
+         <section class="about-mandys">
+         <p> Whether your furry friend needs a deep clean after a rainy day at the dog park or just a regular bath & blow dry, our self-serve stations provide all you'll need. </p> 
 
          <p> Head on over to our convenient West Chester location and treat your pet to a day at the spa, without having to deal with cleanup!</p> 
-   
+      </section>
 
       </main>
 
@@ -54,7 +63,10 @@
 
 
 
-<footer></footer>
+
+      <footer>
+         &copy; 2025 Mandy's Dog-o-Mat.
+      </footer>
 </body>
 </div>
 </html>
