--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
   
 
       <main>
+    <section class="contactus-layout">
       <section class="contact-us">
          <h2>Contact Us</h2>
          <p><strong>Phone:</strong> <a href="tel:5138471240">513-847-1240</a></p>
@@ -39,6 +40,15 @@
          <p><strong>We are located at:</strong><br>
             6896 Tylersville Rd<br>
             West Chester, OH 45069</p>
+            <div class="map-container">
+               <iframe 
+                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3088.9327332084253!2d-84.3693251846293!3d39.35526197950182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88404fd1a88bfc7f%3A0x5cb81e2eb9a8fef3!2s6896%20Tylersville%20Rd%2C%20West%20Chester%20Township%2C%20OH%2045069!5e0!3m2!1sen!2sus!4v1682381249517!5m2!1sen!2sus" 
+                 width="600" 
+                 height="450"
+                 loading="lazy" 
+                 referrerpolicy="no-referrer-when-downgrade">
+               </iframe>
+             </div>
 
           <p><strong>We are open:</strong><br>
             Monday through Saturday: 10 a.m. – 7 p.m.<br>
@@ -51,6 +61,15 @@
             Christmas Eve (12/24), Christmas Day (12/25),<br>
             Day After Christmas (12/26), and New Year’s Day (1/1).</p>
             </section>
+
+
+            <section class="hero">
+               <div class="hero-pic">
+                  <img src="images/waving dog.jpg" alt="Friendly dog waving">
+                  <h2 class="hero-tagline">Come Say Hi!</h2>
+               </div>
+            </section>
+         
       </main>
 
 
