--- a/faqs.html
+++ b/faqs.html
@@ -31,6 +31,15 @@
   
 
  <main>
+
+   <section class="hero">
+      <div class="hero-pic">
+         <img src="images/pink leash puppy.jpg" alt="puppy with pink nails">
+         <h2 class="hero-tagline">Got Questions? We’ve Got Answers!</h2>
+      </div>
+   </section>
+
+
       <section class="faqs">
          <h2>Frequently Asked Questions</h2>
 
@@ -64,7 +73,12 @@
             <p>You can always add more tokens to continue washing or drying your pet. We can help you plan the right amount before you start.</p>
          </div>
 
-       
+         <section class="hero">
+            <div class="hero-pic">
+               <img src="images/station.jpg" alt="dog wash station at Mandy's">
+               <h2 class="hero-tagline">Bring your dog and stop in today!</h2>
+            </div>
+         </section>
       </section>
    
    
