--- a/services.html
+++ b/services.html
@@ -41,9 +41,18 @@
                <li>Token-operated tubs: 5$ tokens for 7 minutes of wash & dry time </li>
                <li>We can help estimate how many tokens you need based on your pet's breed and size. </li>
             </ul>
+         </section>
          <section class="service-section">
             <h2>Grooming</h2>
             <p>Let us handle it! Call us and we'll give you a quote based on your dog's breed and size.</p>
+         </section>
+
+         <section class="hero">
+            <div class="hero-pic">
+               <img src="images/bernard.jpg" alt="St. Bernard enjoying the spa day">
+               <h2 class="hero-tagline"> Our self-serve stations are big enough to handle all your dog's needs!</h2>
+            </div>
+
          </section>
 
          <section class="service-section">
@@ -61,7 +70,7 @@
 
 
 
-            </ul>
+            
 
 
 
